--- a/environment_pirl_carla.yml
+++ b/environment_pirl_carla.yml
@@ -24,6 +24,7 @@ dependencies:
   - blas=1.0=openblas
   - bleach=4.1.0=pyhd3eb1b0_0
   - blinker=1.4=py37h06a4308_0
+  - bottleneck=1.3.5=py37h7deecbd_0
   - brotli=1.0.9=h5eee18b_8
   - brotli-bin=1.0.9=h5eee18b_8
   - brotlipy=0.7.0=py37h27cfd23_1003
@@ -166,6 +167,7 @@ dependencies:
   - nettle=3.6=he412f7d_0
   - ninja=1.10.2=h06a4308_5
   - ninja-base=1.10.2=hd09550d_5
+  - numexpr=2.8.4=py37hd2a5715_0
   - numpy=1.21.5=py37hf838250_3
   - numpy-base=1.21.5=py37h1e6e340_3
   - numpydoc=1.5.0=py37h06a4308_0
@@ -175,6 +177,7 @@ dependencies:
   - openh264=1.8.0=hdbcaa40_1000
   - openssl=1.1.1w=h7f8727e_0
   - packaging=22.0=py37h06a4308_0
+  - pandas=1.3.5=py37h8c16a72_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
   - pathspec=0.10.3=py37h06a4308_0
